# PollyXT-SCC-Pipelines

./: .buildinfo  .gitignore  .gitlab-ci.yml  CHANGELOG.md  COPYING.LESSER  README.md  auth.html  calibration-qc.html  convert-scc.html  genindex.html  index.html  installation.html  locations.html  manage-scc.html  network-api.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scc-upload-download.html  search-scc.html  search.html  searchindex.js  usage.html
.github/workflows/: docs.yml  python-publish.yml
_modules/: index.html
_modules/pollyxt_pipelines/: locations.html  scc_access.html
_modules/pollyxt_pipelines/polly_to_scc/: pollyxt.html  scc_netcdf.html
_modules/pollyxt_pipelines/scc_access/: exceptions.html  types.html
_sources/: auth.rst.txt  calibration-qc.rst.txt  convert-scc.rst.txt  index.rst.txt  locations.rst.txt  network-api.rst.txt  scc-upload-download.rst.txt  search-scc.rst.txt
docs/: auth.rst  conf.py  convert-scc.rst  index.rst  installation.rst  locations.rst  manage-scc.rst  scc-upload-download.rst  search-scc.rst  usage.rst
pollyxt_pipelines/: LoggerCommand.py  __init__.py  __main__.py  config.py  console.py  enums.py  locations.py  sun.py  test_utils.py  utils.py
pollyxt_pipelines/locations/: __init__.py  commands.py  locations.ini
pollyxt_pipelines/polly_to_scc/: commands.py  exceptions.py  pollyxt.py  scc_netcdf.py  test_pollyxt.py
pollyxt_pipelines/qc_eldec/: commands.py  constants.py  qc_eldec_file.py
pollyxt_pipelines/radiosondes/: __init__.py  commands.py  exceptions.py  noa_wrf.py  scc.py  wrf.py
pollyxt_pipelines/scc_access/: __init__.py  api.py  commands.py  constants.py  exceptions.py  new_api.py  types.py
