[tool.poetry]
name = "pollyxt_pipelines"
version = "1.6.0"
description = "Tools and scripts related to the automated processing of PollyXT files"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]

[tool.poetry.scripts]
pollyxt_pipelines = 'pollyxt_pipelines:main'

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
netCDF4 = "^1.5.4"
numpy = "^1.19.4"
pandas = "^1.1.4"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.3"
rich = "^9.2.0"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
Sphinx = "^3.3.1"
sphinx-typlog-theme = "^0.8.0"
sphinx-autodoc-typehints = "^1.11.1"
black = "^20.8b1"

[build-system]
requires = ["setuptools", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }
