[tool.poetry]
name = "pollyxt_pipelines"
version = "1.14.0"
description = "Tools and scripts related to the automated processing of PollyXT files"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]

[tool.poetry.scripts]
pollyxt_pipelines = 'pollyxt_pipelines:main'

[tool.poetry.dependencies]
python = "^3.8,<3.11"
cleo = "^0.8.1"
netCDF4 = "^1.5.7"
numpy = "^1.23.3"
pandas = "^1.5.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
rich = "^12.5.1"
matplotlib = "^3.6.0"
astral = "^3.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
black = "^22.8.0"
pytest = "^6.2.1"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.2"
sphinx-typlog-theme = "^0.8.0"
sphinx-autodoc-typehints = "^1.19.4"
esbonio = "^0.14.1"

[build-system]
requires = ["setuptools", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }
