[project]
name = "pollyxt_pipelines"
version = "1.16.0"
description = "Tools and scripts related to the automated processing of PollyXT files"
authors = [{ name = "Thanasis Georgiou", email = "ageorgiou@noa.gr" }]
requires-python = ">=3.9,<3.14"
dependencies = [
  "cleo>=0.8.1,<1.0",
  "netCDF4>=1.5.7",
  "numpy>=1.26.4",
  "pandas>=1.5.0",
  "requests>=2.28.1",
  "beautifulsoup4>=4.11.1",
  "rich>=12.5.1",
  "matplotlib>=3.6.0",
  "astral>=3.2",
]

[project.scripts]
pollyxt-pipelines = "pollyxt_pipelines:main"

[project.optional-dependencies]
dev = ["pylint>=2.15.3", "black>=22.8.0", "pytest>=6.2.1"]
docs = [
  "Sphinx>=5.2.2",
  "sphinx-typlog-theme>=0.8.0",
  "sphinx-autodoc-typehints>=1.19.4",
  "esbonio>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
